# easytts

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
src/: audio_player.py  blocked_progressbar.py  main_window.py  sentence_display.py  speaker_tts_set.py  tts_set.py  tts_set_dialog.py  utils.py
src/client/: base_client.py  client_factory.py  edge_tts_client.py
src/speaker_identification/csi/: requirements.txt  run_si.py  test_si.py  test_si.sh
src/speaker_identification/csi/evaluate/: cmrc2018_output.py
src/speaker_identification/csi/preprocess/: cmrc2018_preprocess.py
src/speaker_identification/csi/tokenizations/: official_tokenization.py
src/speaker_identification/preprocess/: name_extractor.py  text_preprocess.py
src/ui/: Ui_audio_player.py  Ui_blocked_progressbar.py  Ui_main_window.py  Ui_sentence_display.py  Ui_speaker_tts_set.py  Ui_tts_set.py  Ui_tts_set_dialog.py  audio_player.ui  blocked_progressbar.ui  main_window.ui  sentence_display.ui  speaker_tts_set.ui  tts_set.ui  tts_set_dialog.ui
src/ui/resource/: res.qrc  res_rc.py
